feat: 시큐리티 필터체인 초기 설정 시작(SecurityConfiguration) / 오아스 기초 설정 / 인증 관련 auth 컨트롤러 추가 / 시큐리티 미인증시 응답 Http 메시지 json 구조를 스프링 기본 에러 객체 구조로 커스터마이징

--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,9 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+
 	// mockito 초기화 오류를 해결하는 의존성주입
 	testImplementation 'org.mockito:mockito-core:4.9.0'
 
