feat: 1. Jwt 액세스 토큰 생성, 검증, 추출, 인증, 발급 로직 구현 ( JwtTokenProvider, JwtAuthenticationFilter 추가 )
2. Jwt 폼 로직 구현
( CustomUserDetailsService에 Jwt 전용 메서드인 loadUserByMemberId 메서드를 추가 /
인증 성공 핸들러 CustomAuthenticationSuccessHandler 메서드에서 Jwt 생성 후 Http 응답에 담아 전달하도록 리팩토링 /

3. Jwt 폼 오아스 로직 구현
( 인증 성공 핸들러 CustomOAuth2SuccessHandler 추가 - 리다이렉트를 설정해서 Jwt 액세스 토큰 생성 후 응답으로 전달 /
오아스 팝업창 전용 리액트 라우터 '/oauth/point' 로 리다이렉트 하도록 리팩토링 )

4. 공통 사용자 정보 객체 수정
( CustomOAuth2User의 getName()과 CustomUserDetails의 getUsername()을 return String.valueOf(member.getId()) 로 수정 - 이유는 JwtTokenProvider 에서 String memberId = authentication.getName(); 을 사용하는데 이 memberId 변수는 jwt 토큰의 setSubject로 설정되고 이것은 Member 중 유일값 이어야 하기때문이다. )

5. 시큐리티 설정 추가 및 변경
( addFilterBefore, sessionManagement 설정 /
requestMatchers("/error", "/error/**").permitAll() 추가 - 필터체인이 에러 처리를 가로채 401로 바꾸지 않도록 처리 )

6. Jwt 구현후 테스트 완료

--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,11 @@ dependencies {
 	// mockito 초기화 오류를 해결하는 의존성주입
 	testImplementation 'org.mockito:mockito-core:4.9.0'
 
+	// jwt
+	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
+	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5' // JSON 직렬화용
+
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 
 	runtimeOnly 'com.h2database:h2'
